sample-server-to-log-with-envoy/envoy-script.yaml
# This file is about Envoy Configuration: Static 
# For more information, see https://www.envoyproxy.io/docs/envoy/latest/start/quick-start/configuration-static
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:

  listeners: 
  - name: listener_0 
    address:
      socket_address:
        address: 0.0.0.0 # listen for all 
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager # http filter
        typed_config: # What exact type we're pulling for. 
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # Access Log see https://www.envoyproxy.io/docs/envoy/latest/start/quick-start/run-envoy#envoy-logging
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          #
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service # The ID of the cluster.
              domains: ["*"]
              routes: # What are we match - 1
              - match: 
                  prefix: "/" # anything that comes here with prefix : '/' - 2
                route: # immediately go ans route to this cluster (service_envoyproxy_io) - 3
                  cluster: my_service

# And we don't have my_service Backend cluster, so Let's build it. 
  clusters:
  - name: my_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: my_service
      endpoints: # endpoint we're listening to 
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 3000
